# usematcha

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
matcha/: __init__.py  _api.py  _diff.py  _engine.py  _jsonl.py  _metrics.py  _monitor.py  _otlp.py  _output.py  _prometheus.py  api.py  cli.py
matcha/_backends/: __init__.py  _base.py  _ioreport.py  apple.py  intel.py  nvml.py  rocm.py
matcha/callbacks/: __init__.py  hf.py
matcha/commands/: __init__.py  diff.py  monitor.py  stdout_metrics.py
matcha/exporters/: __init__.py  jsonl.py  otlp.py  prometheus.py
