[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "usematcha"
version = "0.3.1"
description = "GPU energy observability for AI training workloads"
readme = "README.md"
requires-python = ">=3.9"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "Keeya Labs", email = "jay@keeyalabs.com" }]
keywords = [
    "gpu",
    "energy",
    "power",
    "training",
    "pytorch",
    "nvml",
    "observability",
    "efficiency",
    "sustainability",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: System Administrators",
    "Topic :: System :: Monitoring",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Operating System :: POSIX :: Linux",
    "Environment :: GPU :: NVIDIA CUDA",
    "Environment :: Console",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
]
dependencies = ["nvidia-ml-py>=12.0"]

[project.optional-dependencies]
otlp = [
    "opentelemetry-sdk>=1.20",
    "opentelemetry-exporter-otlp-proto-http>=1.20",
]
# HuggingFace Trainer integration (matcha.callbacks.StepEnergyCallback).
# Kept optional so `pip install usematcha` stays transformers-free for
# users who only want the CLI or the bare Python API.
hf = ["transformers>=4.30"]

[project.urls]
Homepage = "https://usematcha.dev"
Documentation = "https://usematcha.dev"
Repository = "https://github.com/keeyalabs/usematcha"
Issues = "https://github.com/keeyalabs/usematcha/issues"
Changelog = "https://github.com/keeyalabs/usematcha/blob/main/CHANGELOG.md"

[project.scripts]
matcha = "matcha.cli:main"

[tool.setuptools]
packages = [
    "matcha",
    "matcha.callbacks",
    "matcha.exporters",
    "matcha.commands",
]

[tool.setuptools.package-data]
matcha = ["py.typed"]
