[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "usematcha"
version = "0.3.1"
description = "GPU energy observability for AI training workloads"
readme = "README.md"
requires-python = ">=3.9"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "Keeya Labs", email = "jay@keeyalabs.com" }]
keywords = [
    "gpu",
    "energy",
    "power",
    "training",
    "pytorch",
    "nvml",
    "observability",
    "efficiency",
    "sustainability",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: System Administrators",
    "Topic :: System :: Monitoring",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Environment :: GPU :: NVIDIA CUDA",
    "Environment :: GPU",
    "Environment :: Console",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
]
# nvidia-ml-py is kept as a default dependency because it is a pure-Python
# wrapper (installs cleanly on every platform, including macOS and AMD-only
# Linux hosts) and the NVML backend is the most common path for matcha users.
# On non-NVIDIA hosts it simply fails the init probe and auto-detection falls
# through to the right backend (ROCm, Intel, Apple Silicon).
dependencies = ["nvidia-ml-py>=12.0"]

[project.optional-dependencies]
otlp = [
    "opentelemetry-sdk>=1.20",
    "opentelemetry-exporter-otlp-proto-http>=1.20",
]
# HuggingFace Trainer integration (matcha.callbacks.StepEnergyCallback).
# Kept optional so `pip install usematcha` stays transformers-free for
# users who only want the CLI or the bare Python API.
hf = ["transformers>=4.30"]
# Hardware backend extras. These are intentionally empty today:
#   * AMD and Intel backends shell out to their vendor CLI
#     (``rocm-smi`` / ``xpu-smi``) — nothing on PyPI to pull in.
#   * Apple Silicon uses stdlib ctypes against Darwin's IOReport
#     framework (``/usr/lib/libIOReport.dylib``) — again no PyPI deps.
# They exist as named extras so users can declare intent
# (``pip install 'usematcha[amd]'``) and so future Python-binding
# migrations (pyrsmi for AMD, pyze_l0 for Intel) can add dependencies
# without changing the install incantation.
amd = []
intel = []
mac = []

[project.urls]
Homepage = "https://usematcha.dev"
Documentation = "https://usematcha.dev"
Repository = "https://github.com/keeyalabs/usematcha"
Issues = "https://github.com/keeyalabs/usematcha/issues"
Changelog = "https://github.com/keeyalabs/usematcha/blob/main/CHANGELOG.md"

[project.scripts]
matcha = "matcha.cli:main"

[tool.setuptools]
packages = [
    "matcha",
    "matcha._backends",
    "matcha.callbacks",
    "matcha.exporters",
    "matcha.commands",
]

[tool.setuptools.package-data]
matcha = ["py.typed"]
